添加文章pytroch的安装

--- a/docs/python/开发工具/开发工具文章汇总.md
+++ b/docs/python/开发工具/开发工具文章汇总.md
@@ -9,7 +9,8 @@ tags:
   - tools
   - 开发工具
 ---
-
 # 开发工具文章汇总
 
 [现代工具链 uv 的安装与使用](/python/开发工具/现代工具链uv的安装与使用)
+
+[pytorch安装](/python/开发工具/pytorch安装)
