--- a/docs/tools/开发工具/开发工具文章汇总.md
+++ b/docs/tools/开发工具/开发工具文章汇总.md
@@ -8,9 +8,12 @@ tags:
   - tools
   - 开发工具
 ---
-
 # 开发工具文章汇总
 
 ## cursor
 
 [完全卸载 cursor](/tools/开发工具/cursor/完全卸载cursor)
+
+## ssh
+
+[ssh私钥](/tools/开发工具/ssh/ssh私钥)
