--- a/docs/python/开发工具/开发工具文章汇总.md
+++ b/docs/python/开发工具/开发工具文章汇总.md
@@ -14,3 +14,5 @@ tags:
 [现代工具链 uv 的安装与使用](/python/开发工具/现代工具链uv的安装与使用)
 
 [pytorch安装](/python/开发工具/pytorch安装)
+
+[vscode配置python开发环境](/python/开发工具/vscode配置python开发环境)
